# PX4-ROS2_drone_control

./: 10050_gazebo-classic_my_vehicle  README.md  my_world.world
my_vehicle/: my_vehicle.sdf
px4-ros2_Bi-RRT/src/offboard_control/: package.xml  setup.py
px4-ros2_Bi-RRT/src/offboard_control/offboard_control/: drone_controller.py  main.py  map_loader.py  path_planner.py
px4-ros2_Bi-RRT/src/px4_msgs/: CMakeLists.txt  package.xml
